--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,14 +35,14 @@
                               <span>Interface Design</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
-                            <a routerLink="/services/front-end-dev" title="Front End Development">
+                            <a routerLink="/services/front-end-dev" title="UI Development">
                               <img src="/assets/images/menu/front-end-development.png" />
-                              <span>Front End Development</span>
+                              <span>UI Development</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
-                            <a routerLink="/services/back-end-dev" title="Back End Development">
+                            <a routerLink="/services/back-end-dev" title="End-to-End Development">
                               <img src="/assets/images/menu/back-end-development.png" />
-                              <span>Back End Development</span>
+                              <span>End-to-End Development</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
@@ -94,11 +94,11 @@
         <div class="footer-logo"><img src="/assets/images/logo2.png" alt="Uxmint"></div>
         <address class="mb-0">
           <fa-icon [icon]="['fas','map-marker-alt']"></fa-icon>
-          <p>KCV Towers, 2nd floor, </p>
-          <p> No.23 Ramnagar North Extn, </p>
-          <p> 7th Main Road Velacherry, </p>
-          <p> Chennai 600042.</p>
-          <p>(Opp to Chennai silks, </p>
+          <p>KCV Towers, 2nd floor,</p>
+          <p> No.23 Ramnagar North Extn,</p>
+          <p> 7th Main Road Velachery,</p>
+          <p> Chennai 600042</p>
+          <p>(Road Opp. to Chennai Silks,</p>
           <p>Behind Mahindra Showroom)</p>
         </address>
         <ul class="footer-social-links">
@@ -116,11 +116,11 @@
                 <ul class="footer-links">
                     <li class="font-weight-bold">Services</li>
                     <li><a routerLink="/services/ux-consulting">UX Consulting</a></li>
-                    <li><a routerLink="/services/visual-design">Visual Design</a></li>
-                    <li><a routerLink="/services/front-end-dev">Front End Development</a></li>
-                    <li><a routerLink="/services/back-end-dev">Back End Development</a></li>
+                    <li><a routerLink="/services/visual-design">Interface Design</a></li>
+                    <li><a routerLink="/services/front-end-dev">UI Development</a></li>
+                    <li><a routerLink="/services/back-end-dev">End-to-End Development</a></li>
                     <li><a routerLink="/services/usability-testing">Usability Testing</a></li>
-                    <li class="font-weight-bold"><a href="http://uxmint.in">Training</a></li>
+                    <li class="font-weight-bold"><a href="http://uxmint.in">UX Training</a></li>
                   </ul>
             </div>
             <div class="col-md-6 desktop-only">
@@ -136,9 +136,9 @@
         </div>
             <div class="col-md-4">
               <ul class="footer-links">
-                <li><a href="tel:+91 9884053886"><fa-icon [icon]="['fas','phone']" transform="rotate--270"></fa-icon> +91 9884053886</a></li>
-                <li><a href="tel:+91 9940410072"><fa-icon [icon]="['fas','phone']" transform="rotate--270"></fa-icon> +91 9940410072</a></li>
-                <li><a href="mailto:enquire@uxmint.in"><fa-icon [icon]="['fas','envelope']"></fa-icon> enquire@uxmint.in</a></li>
+                <li><a href="tel:+91 9884053886"><fa-icon [icon]="['fas','phone']" transform="rotate--270"></fa-icon>+91 9884053886</a></li>
+                <li><a href="tel:+91 9940410072"><fa-icon [icon]="['fas','phone']" transform="rotate--270"></fa-icon>+91 9940410072</a></li>
+                <li><a href="mailto:enquire@uxmint.in"><fa-icon [icon]="['fas','envelope']"></fa-icon>enquire@uxmint.in</a></li>
               </ul>
             </div>
         </div>
@@ -147,7 +147,7 @@
     <div class="row">
         <div class="col-md-12">
           <div class="text-center">
-            <a routerLink="/terms-and-conditions">Terms and conditions</a> | <a routerLink="/privacy-policy">Privacy policy</a>
+            <a routerLink="/terms-and-conditions">Terms and Conditions</a> | <a routerLink="/privacy-policy">Privacy Policy</a>
           </div>
         </div>
     </div>
