--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,7 @@
               <div>
                 <h3>{{ item.title }}</h3>
                 <p>{{ item.description }}</p>
+                <br>
                 <a class="btn" [routerLink]="item.route">See our Works</a>
               </div>
             </div>
@@ -51,8 +52,8 @@
           <div class="col-md-4">
               <div class="service">
                 <div class="service-icon">
-                    <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
-                    <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
+                    <img src="/assets/images/services/Group 2790.png" alt="UX Consulting"/>
+                    <img src="/assets/images/services/Group 3368.png" alt="UX Consulting"/>
                 </div>
                 <h4>UX Consulting</h4>
                 <p>We believe research brings insights, our consultants connect with your business and end-users to build a better solutions to drive the business.</p>
@@ -62,8 +63,8 @@
           <div class="col-md-4">
             <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/services/Group 2745.png" alt="Visual Design"/>
-                  <img src="/assets/images/services/Group 3370.png" alt="Visual Design"/>
+                  <img src="/assets/images/services/Group 2745.png" alt="UI Design"/>
+                  <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
                 </div>
                 <h4>Interface Design</h4>
                 <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -73,10 +74,10 @@
         <div class="col-md-4">
           <div class="service">
             <div class="service-icon">
-              <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
-              <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
+              <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
+              <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
             </div>
-            <h4>Front End Development</h4>
+            <h4>UI Development</h4>
             <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
               execute it pixel perfect</p>
             <a routerLink="/services/front-end-dev" class="btn">Show More</a>
@@ -112,7 +113,7 @@
                   <img src="/assets/images/services/Group 2770.png" alt="Training"/>
                   <img src="/assets/images/services/Group 3369.png" alt="Training"/>
                 </div>
-                <h4>Training</h4>
+                <h4>UX Training</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready</p>
                 <a href="http://uxmint.in" class="btn">Show More</a>
               </div>
