--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -15,12 +15,12 @@
       </aside>
       <main>
           <div class="form-header">
-              <h3>Hey, we Always Welcome<span class="blackterm"> Onboard new Talents</span></h3>
+              <h3>Hey, we always Welcome<span class="blackterm"> Onboard new Talents</span></h3>
               <p>You can apply if you are</p>
               <div class="applying-for">
                 <button class="btn" [class.checked]="item.checked" (click)="togglePosition(item)" *ngFor="let item of items;"><span>&times;</span> {{ item.name }}</button>
               </div>
-              <div class="error-feedback" *ngIf="hasError('position','required')">Please select position</div>
+              <div class="error-feedback" *ngIf="hasError('position','required')">Please select Position</div>
           </div>
           <form [formGroup]="form" (ngSubmit)="onSubmit()" [class.ng-submitted]="submitted">
               <div class="form-group">
@@ -32,15 +32,15 @@
               <div class="form-group">
                 <label>Phone Number</label>
                   <input type="tel" class="form-control" formControlName="phone" maxlength="15"/>
-                  <div class="error-feedback" *ngIf="hasError('phone','required')">Please enter your contact number</div>
+                  <div class="error-feedback" *ngIf="hasError('phone','required')">Please enter your Contact Number</div>
                   <div class="error-feedback" *ngIf="hasError('phone','pattern')">Phone number is less than 10 digits</div>
                   <div class="error-feedback" *ngIf="hasError('phone','remote')">{{ form.get('phone').getError('remote') }}</div>
               </div>
               <div class="form-group">
                 <label>Email</label>
                 <input type="email" class="form-control"  formControlName="email" maxlength="30"/>
-                <div class="error-feedback" *ngIf="hasError('email','required')">Please enter your email</div>
-                <div class="error-feedback" *ngIf="hasError('email','pattern')">Please provide a valid email address</div>
+                <div class="error-feedback" *ngIf="hasError('email','required')">Please enter your e-mail</div>
+                <div class="error-feedback" *ngIf="hasError('email','pattern')">Please provide a valid e-mail address</div>
                 <div class="error-feedback" *ngIf="hasError('email','remote')">{{ form.get('email').getError('remote') }}</div>
               </div>
               <div class="form-group">
@@ -49,13 +49,13 @@
                       <input #inputFile type="file" (change)="onChange($event)" class="custom-file-input" id="customFile" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" formControlName="fileInput">
                       <label class="custom-file-label" for="customFile"><fa-icon [icon]="['fas','paperclip']"></fa-icon> {{ resume ? resume.name : '' }}</label>
                   </div>
-                  <div class="error-feedback" *ngIf="hasError('resume','required')">Please attach a resume</div>
+                  <div class="error-feedback" *ngIf="hasError('resume','required')">Please attach a Resume</div>
                   <div class="error-feedback" *ngIf="hasError('resume','remote')">{{ form.get('resume').getError('remote') }}</div>
               </div>
               <div class="form-group">
                 <label>Portfolio URL</label>
                 <input type="url" class="form-control" formControlName="portfolio_url"/>
-                <div class="error-feedback" *ngIf="hasError('portfolio_url','pattern')">Please provide a valid portfolio URL</div>
+                <div class="error-feedback" *ngIf="hasError('portfolio_url','pattern')">Please provide a valid Portfolio URL</div>
                 <div class="error-feedback" *ngIf="hasError('portfolio_url','remote')">{{ form.get('portfolio_url').getError('remote') }}</div>
               </div>
               <div class="form-group text-center">
