--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -9,7 +9,7 @@
               <a routerLink="/contact-us" routerLinkActive="active"><span>PROJECT ENQUIRE</span></a>
             </li>
             <li>
-                <a routerLink="/careers" routerLinkActive="active"><span>CARRERS</span></a>
+                <a routerLink="/careers" routerLinkActive="active"><span>CAREERS</span></a>
             </li>
           </ul>
       </aside>
