--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -67,7 +67,7 @@
                   <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
                 </div>
                 <h4>Interface Design</h4>
-                <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
+                <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
                 <a routerLink="/services/visual-design" class="btn">Show More</a>
             </div>
         </div>
@@ -79,7 +79,7 @@
             </div>
             <h4>UI Development</h4>
             <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
-              execute it pixel perfect</p>
+              execute it pixel perfect.</p>
             <a routerLink="/services/front-end-dev" class="btn">Show More</a>
           </div>
         </div>
@@ -92,7 +92,7 @@
                     <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                   </div>
                   <h4>End-to-End Development</h4>
-                  <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
+                  <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL.</p>
                   <a routerLink="/services/back-end-dev" class="btn">Show More</a>
                 </div>
           </div>
@@ -103,7 +103,7 @@
                 <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
               </div>
               <h4>Usablity Testing</h4>
-              <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
+              <p>By means of Usability Testing techniques we evaluate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience.</p>
               <a routerLink="/services/usability-testing" class="btn">Show More</a>
             </div>
       </div>
@@ -114,7 +114,7 @@
                   <img src="/assets/images/services/Group 3369.png" alt="Training"/>
                 </div>
                 <h4>UX Training</h4>
-                <p>Transform your workforce with cheery picked courses making them business focused and future ready</p>
+                <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
                 <a href="http://uxmint.in" class="btn">Show More</a>
               </div>
           </div>
