--- a/src/app/components/projects/app-development/app-development.component.html
+++ b/src/app/components/projects/app-development/app-development.component.html
@@ -8,18 +8,20 @@
         </div>
         <div class="heading">
           <h1><span class="text-primary">App</span> Development</h1>
-          <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.</p>
+          <p>Platform for designers, design aspirants/students, mentor to collaborate and share their ideology, design method, process and uplift their skills in the Design domain.</p>
         </div>
           <div class="web">
-          <p>WHAT WE DONE</p>
+          <p>WHAT WE DID</p>
         </div>
           <ul class="dev">
-          <li>Front End Development</li>
+          <li>UX Research</li>
+          <li>UI Design</li>
+          <li>Android & iOS</li>
           <li>Back End Development</li>
           </ul>
       </div>
       <div class="col-md-8">
-        <img src="/assets/images/projects/app-development/app-dev.png" alt="UX consulting"/>
+        <img src="/assets/images/projects/app-development/app-dev.png" alt="Native App Development"/>
       </div>
     </div>
   </div>
@@ -35,10 +37,10 @@
          <h1>About Project</h1>
     </div>
     <div class="col-md-6">
-        <p>but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA deliver seamless service Marriages and events are more emotionally connected to peoples
-          lives in India and the current younger generation is ready to spend a lot to make their 
-          events more memorable.
+        <p>The user base was scattered across multiple segments of "Students, Mentors, Designers" the requirement 
+          was to service every segment of the user differently. Some were using the application to only browse through 
+          or consume the information while others were active participants who contributed to the content. The framework had to 
+          be chosen carefully to cater all the needs seemlessly.
         </p>
     </div>
   </div>
@@ -50,9 +52,7 @@
 <section class="platform">
   <div class="container">
     <h1>Platform we used</h1>
-    <p>We choose the right framework to suite the business needs in terms: easy of use, scalability, 
-      interoperability with standard technology, adaptability with emerging technologies and integration 
-      with back-end system
+    <p>Native platforms were chosen based on the User Research to cover all the user segments
     </p>
     <div class="row">
       <ul class="list-icons">
@@ -62,7 +62,7 @@
           </li>
           <li>
             <fa-icon [icon]="['fab','apple']"></fa-icon>
-            <p>iOS </p>
+            <p>iOS</p>
           </li>
           </ul>
           </div>
@@ -74,31 +74,30 @@
 <section class="framework">
   <div class="container">
      <h1>Framework we used</h1>
-     <p>but lack the features to get requirements coordinate with customers provide quote</p>
-     <h3>Framework we use</h3>
+     <p>We had chosen React Native & ReactJS with Microservices (Spring Boot) to service all the UI interfaces.</p>
         <div class="row">
             <ul class="list-icons">
                 <li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon6.png" alt="" />
-                        <p>Angular </p>
+                        <p>Angular</p>
                     </div>
                 </li>
                 <li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon7.png" alt="" />
-                        <p>HTML CSS JS </p>
+                        <p>HTML CSS JS</p>
                     </div>
                 </li><li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon8.png" alt="" />
-                        <p>React JS </p>
+                        <p>React JS</p>
                     </div>
                 </li>
                 <li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon9.png" alt="" />
-                        <p>Node JS </p>
+                        <p>Node JS</p>
                     </div>
                 </li>
             </ul>
@@ -107,17 +106,14 @@
 </section>
 <!-- Framework we used -->
 
-<!-- What we done -->
+<!-- What we did -->
+<!--
 <section class="what-we-done">
   <div class="container">
     <div class="row">
       <div class="col-md-5">
-        <h1>What we done</h1>
-        <p>but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA deliver seamless service Marriages and events are more emotionally connected to peoples
-          lives in India and the current younger generation is ready to spend a lot to make their 
-          events more memorable.but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA
+        <h1>What we did</h1>
+        <p>Parallel development for 
         </p>
       </div>
       <div class="col-md-1"></div>
@@ -140,6 +136,7 @@
     </div>
   </div>
 </section>
+-->
 <!-- What we done -->
 
 <!-- Web image -->
