--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -8,12 +8,14 @@
         </div>
         <div class="heading">
           <h1><span class="text-primary">Web</span>  Development</h1>
-          <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.</p>
+          <p>Dashboard for Sales Pitching</p>
         </div>
           <div class="web">
-          <p>WHAT WE DONE</p>
+          <p>WHAT WE DID</p>
         </div>
           <ul class="dev">
+          <li>UX Research</li>
+          <li>UI Design</li>
           <li>Front End Development</li>
           <li>Back End Development</li>
           </ul>
@@ -38,10 +40,9 @@
          <h1>About Project</h1>
     </div>
     <div class="col-md-6">
-        <p>but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA deliver seamless service Marriages and events are more emotionally connected to peoples
-          lives in India and the current younger generation is ready to spend a lot to make their 
-          events more memorable.
+        <p>A Conglomerate with global operation approached us for an Engineering Portal that would serve as a 
+          Dashboard for showcasing all their previous Construction Portfolio. This would be predominantly used be the 
+          Engireening and Marketing team for sales pitches.
         </p>
     </div>
   </div>
@@ -53,13 +54,12 @@
 <section class="platform">
   <div class="container">
     <h1>Platform we used</h1>
-    <p>We choose the right framework to suite the business needs in terms: easy of use, scalability, 
-      interoperability with standard technology, adaptability with emerging technologies and integration 
-      with back-end system
+    <p>Based on our analysis the portal was to be used in bigger screens for presentations by Sales Teams for Pitching
+       & Admin to feed historic project data.
     </p>
     <div class="icon">
       <fa-icon [icon]="['fas','desktop']"></fa-icon>
-    <p>Website</p>
+    <p>Desktop Website</p>
   </div>
   </div>
 </section>
@@ -69,31 +69,27 @@
 <section class="framework">
   <div class="container">
      <h1>Framework we used</h1>
-     <p>but lack the features to get requirements coordinate with customers provide quote</p>
+     <p>Angular, Google Charts, Java (Spring Boot) were the frameworks used since this application required scalability and 
+       future enhancements to portable devices.
+     </p>
      <h3>Framework we use</h3>
         <div class="row">
             <ul class="list-icons">
                 <li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon6.png" alt="" />
-                        <p>Angular </p>
+                        <p>Angular</p>
                     </div>
                 </li>
                 <li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon7.png" alt="" />
-                        <p>HTML CSS JS </p>
+                        <p>Google Charts</p>
                     </div>
                 </li><li>
                     <div class="step-image1">
                         <img src="/assets/images/services/fdicon8.png" alt="" />
-                        <p>React JS </p>
-                    </div>
-                </li>
-                <li>
-                    <div class="step-image1">
-                        <img src="/assets/images/services/fdicon9.png" alt="" />
-                        <p>Node JS </p>
+                        <p>Spring Boot</p>
                     </div>
                 </li>
             </ul>
@@ -107,30 +103,16 @@
   <div class="container">
     <div class="row">
       <div class="col-md-5">
-        <h1>What we done</h1>
-        <p>but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA deliver seamless service Marriages and events are more emotionally connected to peoples
-          lives in India and the current younger generation is ready to spend a lot to make their 
-          events more memorable.but lack the features to get requirements coordinate with customers provide quote sign 
-          SLA
+        <h1>What we did</h1>
+        <p>We devised a one-stop solution for the repeated tasks by analysing the various segments involved in the 
+          usage of proposed portal. Based on the inputs we found the predominant user group would be using the 
+          application in bigger screens like projectors and the portals interactions were designed to support the Sales team.
         </p>
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-6">
-        <ul class="list">
-          <li>but lack the features to get requirements coordinate with customers provide quote sign 
-              SLA deliver seamless service Marriages
-          </li>
-          <li>but lack the features to get requirements coordinate with customers provide quote sign 
-              SLA deliver seamless service Marriages
-          </li>
-          <li>but lack the features to get requirements coordinate with customers provide quote sign 
-              SLA deliver seamless service Marriages
-          </li>
-          <li>but lack the features to get requirements coordinate with customers provide quote sign 
-              SLA deliver seamless service Marriages
-          </li>
-        </ul>
+        <p>Due to the nature of the project it had volumes of numeric data which required representation 
+          in Graphical Interface to better comprehend the numeric data by comparison and trends.</p>
       </div>
     </div>
   </div>
