--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -17,7 +17,7 @@
       </div>
       
       <div class="col-sm-2">
-          <a class="btn btn-primary enquire" routerLink="/contact-us">Enquiry</a>
+          <a class="btn btn-primary enquire" routerLink="/contact-us">Enquire</a>
       </div>
     </div>
   </div>
