--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
-                              <img src="/assets/images/menu/ux-consulting.png" />
+                              <img src="/assets/images/menu/usability-testing.png" />
                               <span>Usability Testing</span>
                             </a>
                           </div>
@@ -102,9 +102,7 @@
           <p>Behind Mahindra Showroom)</p>
         </address>
         <ul class="footer-social-links">
-          <li><a href="https://www.facebook.com/uxmint.in" target="_blank"><fa-icon [icon]="['fab','facebook-square']" size="2x"></fa-icon></a></li>
-          <li><a href="https://www.youtube.com/channel/UChERR1Y8desAe9dHjobbtOw/videos" target="_blank"><fa-icon [icon]="['fab','youtube-square']" size="2x"></fa-icon></a></li>
-          <li><a href="https://www.linkedin.com/company/uxmint" target="_blank"><fa-icon [icon]="['fab','linkedin']" size="2x"></fa-icon></a></li>
+          <li><a href="https://www.linkedin.com/company/uxmint-consulting/" target="_blank"><fa-icon [icon]="['fab','linkedin']" size="2x"></fa-icon></a></li>
           <li><a href="https://medium.com/uxmint" target="_blank"><fa-icon [icon]="['fab','medium']" size="2x"></fa-icon></a></li>
         </ul>
       </div>
