--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="step-image">
-                        <img [src]="'http://api.uxmint.in/thumbnails/'+post.image" [alt]="post.title"/>
+                        <img [src]="post.imageSrc" [alt]="post.title" />
                     </div>
                 </div>
                 <div class="col-md-8">
