--- a/src/app/components/projects/marketing/marketing.component.html
+++ b/src/app/components/projects/marketing/marketing.component.html
@@ -7,8 +7,9 @@
               <div class="logo">
             <img src="/assets/images/projects/marketing/logo.png" alt="UX consulting"/>
         </div>
-            <p>A Business to Consumer website which we done User Experience 
-                based on target audience and done User Interface</p>
+            <p>We created Brand Identity for UX Ahead and responsive website that addresses its business
+                to business capabilities.
+            </p>
                 <div class="background">
                     <img src="/assets/images/projects/marketing/background.png" alt="UX consulting"/>
                 </div>
@@ -33,14 +34,15 @@
       </div>
       <div class="row">
         <div class="col-md-5">
-          <p>Website for a Branding & Resourcing Company.</p>
+          <p>Ux ahead is a design studio based out of London, They expertise in creating seamless customer 
+              experience for online business and also for businesses with physical presence. Services they 
+              offer are Branding, Digital marketing strategy, Development and online reputation management.</p>
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-5">
-            <p>but lack the features to get requirements coordinate with customers provide quote sign 
-              SLA deliver seamless service Marriages and events are more emotionally connected to peoples
-              lives in India and the current younger generation is ready to spend a lot to make their 
-              events more memorable.
+            <p>Our goal was to communicate all of the mentioned things to their clients who are businesses 
+                that deal with the end customers of the service or the product. And also create a branding 
+                strategy and a visual language for will make UX Ahead that would make it recognisable in the industry
             </p>
         </div>
       </div>
@@ -61,20 +63,28 @@
 <!-- Branding -->
 <section class="branding">
     <div class="container">
+    <div class="row">
+    <div class="col-md-4">
         <h1>Branding</h1>
+    </div>
+    <div class="col-md-8">
+        <p>The primary goal of the branding exercise was to create an identity that shows focus and 
+            progress. For which we started with the kickoff discussion about the vision of the brand. 
+            There after going about creating the Moodboard for inspiration, brainstorming and design 
+            direction. Our process helped us to come up with multiple variations for the 'Jewel' in 
+            the combination mark and to pick the right typeface and colour family for the brand
+        </p>
+    </div>
+    </div>
         <div class="row">
             <div class="col-md-5">
-                <p>We done mind map and done several sketching and digitalised logo and iterated the logo
-                    several times. Our goal is to make the logo minimalistic, In many iterations, the logo
-                    is iterated
-                </p>
-                <div class="uxahead">
+            <div class="uxahead">
                 <img src="/assets/images/projects/marketing/uxahead.png" alt="UX consulting"/>
             </div>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-5">
-                <div class="ahead">
+            <div class="ahead">
                 <img src="/assets/images/projects/marketing/ahead.png" alt="UX consulting"/>
             </div>
             </div>
