--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -9,13 +9,13 @@
               ideology, design method, process and uplift their skills in the Design domain.
             </p>
               <div class="background">
-                  <img src="/assets/images/projects/skill-development/background.png" alt="UX consulting"/>
+                  <img src="/assets/images/projects/skill-development/background.png" alt="Skill development"/>
               </div>
         </div>
       </div>
       <div class="col-md-7">
         <div class="image-skill">
-        <img src="/assets/images/projects/skill-development/skill-dev.png" alt="UX consulting"/>
+        <img src="/assets/images/projects/skill-development/skill-dev.png" alt="Skill development"/>
       </div>
       </div>
     </div>
