--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -102,15 +102,19 @@
 <section class="what-we-done">
   <div class="container">
     <div class="row">
+      <div class="col-md-12">
+    <h1>What we did</h1>
+  </div>
+  </div>
+    <div class="row">
       <div class="col-md-5">
-        <h1>What we did</h1>
         <p>We devised a one-stop solution for the repeated tasks by analysing the various segments involved in the 
           usage of proposed portal. Based on the inputs we found the predominant user group would be using the 
           application in bigger screens like projectors and the portals interactions were designed to support the Sales team.
         </p>
       </div>
       <div class="col-md-1"></div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <p>Due to the nature of the project it had volumes of numeric data which required representation 
           in Graphical Interface to better comprehend the numeric data by comparison and trends.</p>
       </div>
