--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -25,10 +25,13 @@
         text-align: justify;
         margin-bottom: 30px;
     }
-    .step-image img{
-        width: auto;
+    .step-image {
+        margin-top: 40px;
+    img{
+        width: 135%;
         height: auto;
     }
+}
     .step-image1{
         p{
             color: #797979;
