--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -156,6 +156,7 @@ footer{
         list-style: none;
         padding: 0;
         padding-top: 30px;
+        padding-left: 30px;
         li{
             padding-right: 35px;
             display: inline-block;
@@ -281,6 +282,7 @@ footer{
         }
         .footer-social-links{
             padding-top: 40px;
+            padding-left: 0px;
         }
         .desktop-only{
             font-size: 13px;
