--- a/src/app/components/blog/blog.component.scss
+++ b/src/app/components/blog/blog.component.scss
@@ -21,17 +21,18 @@
         }
     }
     .post-excerpt{
-            //box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
             margin-bottom: 80px;
             background-color: #ffffff;
             .p-3{
                 padding: 0rem !important;
             }
-        .step-image{
+        .step-image img{
+            width: 100%;
+            height: 330px;
             filter: #606A74; 
             -webkit-filter: grayscale(1);
         }
-        .step-image:hover{
+        .step-image img:hover{
             filter: none; 
             -webkit-filter: grayscale(0);
         }
@@ -42,8 +43,8 @@
         }
         h3{
             font-size: 20px;
-            line-height: 60px;
             font-family: 'Roboto';
+            margin-bottom: 20px;
         }
         p{
             line-height: 21px;
