contact-us form changes

--- a/src/app/components/pages/privacy/privacy.component.html
+++ b/src/app/components/pages/privacy/privacy.component.html
@@ -1,13 +1,15 @@
 <div class="container">
         <div class="page">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
                 <aside>
                     <ul>
                         <li routerLinkActive="active">
-                            <a routerLink="/terms-and-conditions"><span>Terms and
-                                    Conditions</span></a>
+                            <a routerLink="/terms-and-conditions"><span>TERMS AND CONDITIONS</span></a>
                         </li>
                         <li routerLinkActive="active">
-                            <a routerLink="/privacy-policy"><span>Privacy Policy</span></a>
+                            <a routerLink="/privacy-policy"><span>PRIVACY POLICY</span></a>
                         </li>
                     </ul>
                 </aside>
@@ -54,5 +56,8 @@
                         <p>This document was last updated on Oct 16 2017.</p>
                     </div>
                 </main>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
         </div>
     </div>
