--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -3,6 +3,9 @@
 </div>
 <div class="container">
   <div class="contact-us">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-5">
       <aside>
           <ul>
             <li>
@@ -63,5 +66,8 @@
               </div>
            </form>
       </main>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
   </div>
 </div>
