--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -3,52 +3,59 @@
 </div>
 <div class="container">
     <div class="contact-us">
-        <aside>
-            <ul>
-              <li>
-                <a routerLink="/contact-us" routerLinkActive="active"><span>PROJECT ENQUIRE</span></a>
-              </li>
-              <li>
-                  <a routerLink="/careers" routerLinkActive="active"><span>CARRERS</span></a>
-              </li>
-            </ul>
-        </aside>
-        <main>
-            <div class="form-header">
-                <h3>Hello! <span class="blackterm">You can leave a message.</span></h3>
-                <p>Our team will reach out to you.</p>
-            </div>
-            <form [formGroup]="form" (ngSubmit)="onSubmit()" [class.ng-submitted]="submitted">
-                <div class="form-group">
-                  <label>Name</label>
-                    <input type="text" class="form-control" formControlName="name" maxlength="30"/>
-                    <div class="error-feedback" *ngIf="hasError('name','required')">Please enter your name</div>
-                    <div class="error-feedback" *ngIf="hasError('name','remote')">{{ form.get('name').getError('remote') }}</div>
-                  </div>
-                  <div class="form-group">
-                    <label>Phone number</label>
-                      <input type="tel" class="form-control" formControlName="phone" maxlength="15"/>
-                      <div class="error-feedback" *ngIf="hasError('phone','required')">Please enter your contact number</div>
-                      <div class="error-feedback" *ngIf="hasError('phone','pattern')">Phone number is less than 10 digits</div>
-                      <div class="error-feedback" *ngIf="hasError('phone','remote')">{{ form.get('phone').getError('remote') }}</div>
-                  </div>
-                  <div class="form-group">
-                    <label>Email-id</label>
-                    <input type="email" class="form-control" formControlName="email" maxlength="30"/>
-                    <div class="error-feedback" *ngIf="hasError('email','required')">Please enter your email</div>
-                    <div class="error-feedback" *ngIf="hasError('email','pattern')">Please provide a valid email address</div>
-                    <div class="error-feedback" *ngIf="hasError('email','remote')">{{ form.get('email').getError('remote') }}</div>
-                  </div>
-                  <div class="form-group">
-                    <label>Write your Message</label>
-                    <textarea class="form-control" rows="5"  formControlName="message" maxlength="500"></textarea>
-                    <div class="error-feedback" *ngIf="hasError('message','required')">Please leave a message</div>
-                    <div class="error-feedback" *ngIf="hasError('message','remote')">{{ form.get('message').getError('remote') }}</div>
-                  </div>
-                  <div class="form-group text-center">
-                    <button type="submit" class="btn btn-primary btn-block">Enquiry</button>
-                  </div>
-             </form>
-        </main>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-5">
+            <aside>
+              <ul>
+                <li>
+                  <a routerLink="/contact-us" routerLinkActive="active"><span>PROJECT ENQUIRE</span></a>
+                </li>
+                <li>
+                    <a routerLink="/careers" routerLinkActive="active"><span>CARRERS</span></a>
+                </li>
+              </ul>
+          </aside>
+            <main>
+                <div class="form-header">
+                    <h3>Hello! <span class="blackterm">You can leave a message.</span></h3>
+                    <p>Our team will reach out to you.</p>
+                </div>
+                <form [formGroup]="form" (ngSubmit)="onSubmit()" [class.ng-submitted]="submitted">
+                    <div class="form-group">
+                      <label>Name</label>
+                        <input type="text" class="form-control" formControlName="name" maxlength="30"/>
+                        <div class="error-feedback" *ngIf="hasError('name','required')">Please enter your name</div>
+                        <div class="error-feedback" *ngIf="hasError('name','remote')">{{ form.get('name').getError('remote') }}</div>
+                      </div>
+                      <div class="form-group">
+                        <label>Phone number</label>
+                          <input type="tel" class="form-control" formControlName="phone" maxlength="15"/>
+                          <div class="error-feedback" *ngIf="hasError('phone','required')">Please enter your contact number</div>
+                          <div class="error-feedback" *ngIf="hasError('phone','pattern')">Phone number is less than 10 digits</div>
+                          <div class="error-feedback" *ngIf="hasError('phone','remote')">{{ form.get('phone').getError('remote') }}</div>
+                      </div>
+                      <div class="form-group">
+                        <label>Email-id</label>
+                        <input type="email" class="form-control" formControlName="email" maxlength="30"/>
+                        <div class="error-feedback" *ngIf="hasError('email','required')">Please enter your email</div>
+                        <div class="error-feedback" *ngIf="hasError('email','pattern')">Please provide a valid email address</div>
+                        <div class="error-feedback" *ngIf="hasError('email','remote')">{{ form.get('email').getError('remote') }}</div>
+                      </div>
+                      <div class="form-group">
+                        <label>Write your Message</label>
+                        <textarea class="form-control" rows="5"  formControlName="message" maxlength="500"></textarea>
+                        <div class="error-feedback" *ngIf="hasError('message','required')">Please leave a message</div>
+                        <div class="error-feedback" *ngIf="hasError('message','remote')">{{ form.get('message').getError('remote') }}</div>
+                      </div>
+                      <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary btn-block">Enquiry</button>
+                      </div>
+                 </form>
+            </main>
+          </div>
+          <div class="col-md-3"></div>
+        </div>
+        
       </div>
 </div>
