--- a/src/styles.scss
+++ b/src/styles.scss
@@ -407,17 +407,21 @@ label{
     margin-top: 10px;
 }
 .contact-us{
-    display: flex;
+    //display: flex;
     margin: 100px 0;
     aside{
         min-width: 240px;
         margin-top: 10px;
+        text-align: center;
         ul{
             list-style: none;
             margin: 0;
             padding: 0;
             li{
-                margin-bottom: 40px;
+                margin-bottom: 80px;
+                display: inline-block;
+                padding-left: 20px;
+                padding-right: 60px;
                 a{
                     font-size: 16px;
                     color: rgba(0,0,0,0.5);
@@ -668,11 +672,15 @@ label{
     margin: 100px 0;
     aside{
         min-width: 240px;
+        text-align: center;
         ul{
             list-style: none;
             padding: 0;
             li{
-                margin-bottom: 40px;
+                margin-bottom: 80px;
+                display: inline-block;
+                padding-left: 40px;
+                padding-right: 60px;
                 a{
                     font-size: 16px;
                     color: rgba(0, 0, 0, .5);
@@ -683,10 +691,10 @@ label{
                             content: '';
                             position: absolute;
                             height: 0;
-                            background-color: $secondary;
-                            width: 100%;
-                            left: 0;
-                            bottom: -2px;
+                            background-color: #1ED69F;
+                            width: 8px;
+                            left: -13px;
+                            bottom: 5px;
                             z-index: -1;
                             transition: all 0.1s ease-in;
                         }
@@ -696,7 +704,7 @@ label{
                         font-weight: 700;
                         color: $primary !important;
                         span::before{
-                            height: 10px;
+                            height: 8px;
                         }
                     }
                 }
@@ -707,7 +715,7 @@ label{
                     a{
                         text-decoration: none;
                         span::before{
-                            height: 10px;
+                            height: 8px;
                         }
                     }
                 }
@@ -717,7 +725,7 @@ label{
                         font-weight: 700;
                         color: $primary !important;
                         span::before{
-                            height: 10px;
+                            height: 8px;
                         }
                     }
                 }
@@ -1026,16 +1034,16 @@ label{
             margin-bottom: 50px;
             ul{
                 width: 100%;
-                text-align: left;
                 li{
-                    margin-bottom: 0;
-                    display: inline-block;
-                    padding: 0 10px;
-                    padding-right: 70px;
+                    margin-bottom: 20px;
+                    padding-left: 20px;
+                    padding-right: 20px;
                 }
             }
         }
         main{
+            margin-left: 10px;
+            margin-right: 10px;
             .form-header{
                 margin-bottom: 20px;
                 h3{
@@ -1064,8 +1072,8 @@ label{
         } 
     }
     .page{
+        margin: 60px 0;
         flex-direction: column;
-        margin: 40px 0;
         .page-description{
             h3{
                 margin-bottom: 16px;
@@ -1074,21 +1082,23 @@ label{
             }
         }
         aside{
-            order: 2;
+            margin-bottom: 50px;
+            text-align: left;
             ul{
+                width: 100%;
                 li{
+                    margin-bottom: 20px;
+                    padding-left: 10px;
+                    padding-right: 10px;
                     a{
-                        color: $primary;
-                        font-weight: 700;
+                        font-size: 12px;
                     }
-                    &.active{
-                        display: none;
+                    &:last-child{
+                        margin-bottom: 0;
+                        padding-right: 0;
                     }
                 }
             }
-        }
-        main{
-            order: 1;
         }
     }
     .searvice-jumbotron-inner h1{
