service layout changes

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -35,61 +35,61 @@ section.home-carousel{
             height: auto;
         }
     }
-    .carousel-navigation{
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 20px;
-        ul{
-            display: flex;
-            list-style: none;
-            justify-content: space-between;
-            background-color: #FFF;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-            padding: 0;
-            text-align: center;
-            padding: 0 20px;
-            border-radius: 6px;
-            margin-bottom: 0;
-        }
-        li{
-            min-width: 20%;
-            max-width: 20%;
-        }
-        a{
-            position: relative;
-            display: block;
-            cursor: pointer;
-            opacity: 0.6;
-            padding: 24px 16px;
-            color: #000;
-            font-size: 14px;
-            line-height: 16px;
-            &:hover,
-            &.active{
-                opacity: 1;
-            }
-            &>span{
-                margin-top: 8px;
-            }
-            span{
-                display: block;
-            }
-            &.active:after{
-                position: absolute;
-                content: '';
-                background: #000;
-                height: 8px;
-                border-radius: 10px 10px 0 0;
-                display: block;
-                width: 100%;
-                left: 0;
-                top: -8px;
-            }
-        }
-    }
     .ngucarousel-indicator{
         display: none;
+    }
+}
+.carousel-navigation{
+    left: 0;
+    right: 0;
+    padding-top: 100px;
+    padding-bottom: 40px;
+    ul{
+        display: flex;
+        list-style: none;
+        justify-content: space-between;
+        background-color: #FFF;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+        padding: 0;
+        text-align: center;
+        padding: 0 20px;
+        border-radius: 6px;
+        margin-bottom: 0;
+    }
+    li{
+        min-width: 20%;
+        max-width: 20%;
+    }
+    a{
+        position: relative;
+        display: block;
+        cursor: pointer;
+        opacity: 0.6;
+        padding: 24px 16px;
+        color: #000;
+        font-size: 14px;
+        line-height: 16px;
+        &:hover,
+        &.active{
+            opacity: 1;
+        }
+        &>span{
+            margin-top: 8px;
+        }
+        span{
+            display: block;
+        }
+        &.active:after{
+            position: absolute;
+            content: '';
+            background: #000;
+            height: 8px;
+            border-radius: 10px 10px 0 0;
+            display: block;
+            width: 100%;
+            left: 0;
+            top: -8px;
+        }
     }
 }
 .ngucarousel-indicator{
@@ -335,41 +335,13 @@ section.home-carousel{
     section.home-carousel{
         padding: 30px 0 0;
         margin-bottom: 10px;
-        .carousel-navigation{
-            .container{
-                padding: 0;
-            }
-            position: static;
-            bottom: 0;
-            ul{
-                padding: 10px 0;
-                flex-direction: column;
-                box-shadow: none;
-                border-radius: 0;
-                text-align: left;
-                li{
-                    max-width: 100%;
-                    img{
-                        width: 30px;
-                        height: auto;
-                        margin-right: 10px;
-                    }
-                    span{
-                        display: inline-block;
-                    }
-                    a{
-                        padding: 14px 30px;
-                        &.active:after{
-                            display: none;
-                        }
-                    }
-                }
-            }
-        }
         .ngucarousel-indicator{
             display: block;
             padding: 20px 0;
             margin-bottom: 0;
         }
     }
+    .carousel-navigation{
+        display: none;
+        }
 }
